# countermeasure

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
apps/api/: .env.example  DATAMODEL_PLAN_CHECKLIST.md  Dockerfile  README.md  alembic.ini  current_token.txt  docker-compose.yml  fresh_token.txt  pyproject.toml  setup_collector_user.py  token.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250921_0723_22a839cd8fe6_initial_schema.py  20250921_0816_fce1f36cb2ca_add_structured_metadata_fields_to_.py  20250921_0852_9a81bfabb414_remove_log_sources_column_from_.py  20250921_0905_9fb3edc4b794_fix_existing_detection_data_arrays_and_.py  20250921_1751_7a54ac8461f2_add_stix_uuids_and_actor_technique_.py  20250921_delete_all_detections.py  20250922_1845_e7796ae7dbf0_initial_schema_creation.py
apps/api/src/: main.py
apps/api/src/api/v1/: router.py
apps/api/src/api/v1/dependencies/: auth.py
apps/api/src/api/v1/endpoints/: actors.py  auth.py  detections.py  metrics.py  mitre.py  tenants.py  users.py
apps/api/src/connectors/: __init__.py  base_connector.py  registry.py
apps/api/src/core/: auth.py  confidence.py  config.py  exceptions.py  logging.py  rule_confidence.py  security.py
apps/api/src/db/: init_db.py  session.py
apps/api/src/db/seed_data/: actors.py  mitre_data.py  seed_actors.py  seed_mitre.py  seed_mitre_async.py  seed_threat_actors.py  threat_actors.py
apps/api/src/middleware/: correlation.py  metrics.py  tenant.py
apps/api/src/schemas/: actor.py  auth.py  core.py  detection.py  tenant.py  user.py
apps/api/src/schemas/framework/: __init__.py  mitre.py
apps/api/src/services/: actor_service.py  auth_service.py  detection_service.py
apps/api/src/workers/: __init__.py  collection_tasks.py  task_queue.py
apps/api/tests/: conftest.py
apps/api/tests/e2e/: test_detection_workflow.py  test_error_handling.py  test_multi_tenant_scenarios.py
apps/api/tests/factories/: __init__.py  actor_factory.py  base_factory.py  category_factory.py  detection_factory.py  mitre_factory.py  severity_factory.py  tag_factory.py  tenant_factory.py  user_factory.py
apps/api/tests/fixtures/: suricata_rules.rules  yara_rules.yar
apps/api/tests/integration/: test_audit_logging.py  test_auth_flow.py  test_database_migrations.py  test_detection_relationships.py  test_tenant_isolation.py
apps/api/tests/performance/: locustfile.py  test_concurrent_uploads.py  test_search_performance.py
apps/api/tests/unit/: test_actor_service.py  test_auth.py  test_auth_service.py  test_detection_service.py  test_health.py  test_middleware.py  test_security.py  test_threat_actors.py
apps/collector/: .env.example  COLLECTOR_SERVICES.md  README.md  collector  flower_config.py  pyproject.toml  start_services.py
apps/collector/src/: main.py
apps/collector/src/cli/: __init__.py  history.py
apps/collector/src/collectors/: base.py
apps/collector/src/collectors/detection/: deduplicator.py  sigma.py  sigma_enricher.py  sigma_parser.py
apps/collector/src/collectors/framework/: __init__.py  mitre.py
apps/collector/src/config/: settings.py
apps/collector/src/core/: api_client.py  config.py  logging.py
apps/collector/src/schedulers/: celery_app.py
apps/collector/src/schemas/: detection.py
apps/collector/src/tasks/: collect.py  enrich.py  validate.py
apps/collector/tests/: conftest.py
apps/collector/tests/e2e/: test_sigma_collection_pipeline.py
apps/collector/tests/factories/: __init__.py  api_response_factory.py  sigma_factory.py
apps/collector/tests/integration/: test_api_communication.py  test_batch_processing.py  test_git_operations.py
apps/collector/tests/performance/: test_sigma_parsing_benchmark.py
apps/collector/tests/unit/: test_api_client.py  test_config.py  test_sigma_parser.py
docs/: api_documentation.md  deployment_guide.md  troubleshooting_guide.md
infrastructure/docker/postgres/: init.sql
scripts/: README.md  create_api_test_detections.py  create_test_detections.py  direct_sigma_import.py  import_sigma_rules.py  init-database.sh  process_manager.sh  restart-api.sh  run-sigma-import.sh  test-foundation.sh
