[project]
name = "countermeasure-api"
version = "0.1.0"
description = "Countermeasure API Service - Enterprise Threat Detection Platform"
authors = [
    {name = "Paul Hutelmyer", email = "paul.hutelmyer@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0", # PostgreSQL async driver
    "psycopg[binary]>=3.2.0", # Modern psycopg3
    "redis>=5.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "email-validator>=2.2.0",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "pyyaml>=6.0.0",
    "gitpython>=3.1.0",
    "click>=8.1.0",
    "bcrypt>=4.0.0,<5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "faker>=30.0.0",
    "factory-boy>=3.3.0",
    "locust>=2.31.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "safety>=3.2.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
