[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "countermeasure-collector"
version = "0.1.0"
description = "Countermeasure Collector Service"
readme = "README.md"
authors = [
    {name = "Countermeasure Team", email = "team@countermeasure.dev"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "flower>=2.0.0",
    "aiohttp>=3.12.15",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "safety>=3.2.0",
    "pre-commit>=3.8.0",
    "faker>=30.0.0",
    "factory-boy>=3.3.0",
]

[project.scripts]
countermeasure-collector = "src.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v",
]
asyncio_mode = "auto"


[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
show_error_codes = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true

# Override for specific modules
[[tool.mypy.overrides]]
module = [
    "celery.*",
    "flower.*",
    "redis.*",
    "aiohttp.*",
    "gitpython.*",
]
ignore_missing_imports = true

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # assert_used - assert statements are used in tests
    "B603",  # subprocess_without_shell_equals_true - we need shell=False for security
    "B607",  # start_process_with_partial_path - using full paths where appropriate
]

# Test-specific overrides
[tool.bandit.assert_used]
exclude = ["**/tests/**"]
